--- a/public/css/post.css
+++ b/public/css/post.css
@@ -110,6 +110,7 @@
 .list .item {
   width: 100%;
   height: 100%;
+  padding: 0 5%;
   background-color: #fff;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.15);
 }
@@ -120,16 +121,87 @@
 
 .list__item {
   display: inline-block;
+  vertical-align: top;
   padding: 50px 100px 25px 100px;
   width: 100%;
   height: 100%;
   font-size: 16px;
 }
 
-.list__item .content-spot-number {
+.list__item .content-title {
   text-align: center;
   padding: 30px 0;
   font-size: 30px;
+}
+
+.list__item .title-area {
+  margin-top: 30px;
+}
+
+.list__item .title-area input {
+  width: calc(100% - 130px);
+}
+
+.list__item .plan-textarea-title {
+  margin-top: 50px;
+}
+
+.list__item textarea {
+  width: 100%;
+}
+
+.list__item .plan-information-textarea {
+  height: 150px;
+}
+
+.list__item .spot-detail-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 60px;
+  height: 300px;
+}
+
+.list__item .spot-detail-wrapper .spot-detail-area {
+  width: 65%;
+}
+
+.list__item .spot-detail-wrapper .spot-detail-area .spot-address-area {
+  margin-top: 30px;
+}
+
+.list__item .spot-detail-wrapper .spot-detail-area .spot-address-area input {
+  width: calc(100% - 80px);
+}
+
+.list__item .spot-detail-wrapper .spot-detail-area .spot-tag-area {
+  margin-top: 50px;
+}
+
+.list__item .spot-detail-wrapper .spot-detail-area .spot-tag-area textarea {
+  width: 100%;
+  height: 80px;
+}
+
+.list__item .spot-detail-wrapper .spot-detail-area .spot-area-title {
+  display: inline-block;
+  width: 80px;
+}
+
+.list__item .spot-detail-wrapper .spot-image-area {
+  width: 30%;
+}
+
+.list__item .spot-detail-wrapper .spot-image-area .spot-image-view {
+  height: calc(100% - 35px);
+}
+
+.list__item .spot-detail-wrapper .spot-image-area .spot-image-view img {
+  height: 100%;
+  border: solid;
+}
+
+.list__item .spot-information-textarea {
+  height: 150px;
 }
 
 .submit-button-area {
