--- a/public/css/post.css
+++ b/public/css/post.css
@@ -90,7 +90,7 @@
 
 .list {
   width: calc(100vw - 250px);
-  height: calc(100vh - 150px);
+  height: calc(100vh - 130px);
   margin: 0 auto;
   white-space: nowrap;
   font-size: 0;
@@ -196,12 +196,20 @@
 }
 
 .list__item .spot-detail-wrapper .spot-image-area .spot-image-view img {
-  height: 100%;
-  border: solid;
+  border-radius: 20px;
+  margin-top: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .list__item .spot-information-textarea {
   height: 150px;
+}
+
+.user-input {
+  border: 1px solid #999;
 }
 
 .submit-button-area {
