--- a/resources/sass/post.scss
+++ b/resources/sass/post.scss
@@ -91,7 +91,7 @@
 
 .list {
   width: calc(100vw - 250px);
-  height: calc(100vh - 150px);
+  height: calc(100vh - 130px);
   margin: 0 auto;
   white-space: nowrap;
   font-size: 0;
@@ -192,8 +192,11 @@
           height: calc(100% - 35px);
           
           img {
-            height: 100%;
-            border: solid;
+            border-radius: 20px;
+            margin-top: 10px;
+            object-fit: cover;
+            max-width: 100%;
+            max-height: 100%;
           }
         }
       }
@@ -203,6 +206,11 @@
       height: 150px;
     }
   }
+}
+
+.user-input {
+  border:1px solid #999;
+  // min-width: 400px;
 }
 
 .submit-button-area {
