--- a/public/css/post.css
+++ b/public/css/post.css
@@ -84,6 +84,16 @@
   display: block;
 }
 
+#error-msg {
+  position: fixed;
+  text-align: center;
+  width: calc(100vw - 250px);
+  height: 30px;
+  background-color: rgba(255, 0, 0, 0.5);
+  padding: 5px;
+  color: #fff;
+}
+
 .carousel {
   overflow: hidden;
 }
@@ -170,7 +180,7 @@
 }
 
 .list__item .spot-detail-wrapper .spot-detail-area .spot-address-area input {
-  width: calc(100% - 80px);
+  width: calc(100% - 90px);
 }
 
 .list__item .spot-detail-wrapper .spot-detail-area .spot-tag-area {
@@ -184,7 +194,7 @@
 
 .list__item .spot-detail-wrapper .spot-detail-area .spot-area-title {
   display: inline-block;
-  width: 80px;
+  width: 90px;
 }
 
 .list__item .spot-detail-wrapper .spot-image-area {
@@ -219,5 +229,11 @@
 
 .submit-button-area .post-submit-button {
   width: 300px;
+}
+
+.error-mark {
+  text-decoration: none;
+  display: inline;
+  color: #FF3333;
 }
 
