--- a/resources/sass/post.scss
+++ b/resources/sass/post.scss
@@ -10,19 +10,19 @@
     width: 250px;
     background-color: #fff;
     box-shadow: 0 0 8px 0 rgb(0 0 0 / 15%);
-    
+
     #button-area {
         padding: 0 15px;
         background-color: #f0f0f0;
         border: 1px solid #ccc;
         display: flex;
         justify-content: space-around;
-        
+
         button {
           padding: 8px 2px;
-            margin: 20px 0;
-            width: 80px;
-            font-size: 13px;
+          margin: 20px 0;
+          width: 80px;
+          font-size: 13px;
         }
     }
 }
@@ -61,11 +61,11 @@
   padding: 20px 30px;
   border: 1px solid #ccc;
   cursor: pointer;
-  
+
   .accordion-content-area {
     display: flex;
     justify-content: space-between;
-    
+
     .plus-button {
       margin-right: 10px;
     }
@@ -85,6 +85,16 @@
 
 // ---------------カールセール関連------------------
 
+#error-msg {
+    position: fixed;
+    text-align: center;
+    width: calc(100vw - 250px);
+    height: 30px;
+    background-color: rgba(255,0,0,0.5);
+    padding: 5px;
+    color: #fff;
+}
+
 .carousel {
   overflow: hidden;
 }
@@ -96,29 +106,29 @@
   white-space: nowrap;
   font-size: 0;
   transition: transform 0.5s;
-  
+
   .post-content {
     width: 100%;
     height: 100%;
   }
-  
+
   .spot-content {
     width: 100%;
     height: 100%;
   }
-  
+
   .item {
     width: 100%;
     height: 100%;
     padding: 0 5%;
     background-color: #fff;
     box-shadow: 0 0 8px 0 rgb(0 0 0 / 15%);
-    
+
     &--copy {
       background-color: #f0f0ff;
     }
   }
-    
+
   &__item {
     display: inline-block;
     vertical-align: top;
@@ -126,71 +136,71 @@
     width: 100%;
     height: 100%;
     font-size: 16px;
-    
+
     .content-title {
       text-align: center;
       padding: 30px 0;
       font-size: 30px;
     }
-    
+
     .title-area {
       margin-top: 30px;
-      
+
       input {
         width: calc(100% - 130px);
       }
     }
-    
+
     .plan-textarea-title {
       margin-top: 50px;
     }
-    
+
     textarea {
       width: 100%;
     }
-    
+
     .plan-information-textarea {
       height: 150px;
     }
-    
+
     .spot-detail-wrapper {
       display: flex;
       justify-content: space-between;
       margin-top: 60px;
       height: 300px;
-      
+
       .spot-detail-area {
         width: 65%;
-        
+
         .spot-address-area {
           margin-top: 30px;
-          
+
           input {
-            width: calc(100% - 80px);
+            width: calc(100% - 90px);
           }
         }
-        
+
         .spot-tag-area {
           margin-top: 50px;
-          
+
           textarea {
             width: 100%;
             height: 80px;
           }
         }
-        
+
         .spot-area-title {
           display: inline-block;
-          width: 80px;
+          width: 90px;
         }
       }
-      
+
       .spot-image-area {
         width: 30%;
-        
+
         .spot-image-view {
           height: calc(100% - 35px);
-          
+
           img {
             border-radius: 20px;
             margin-top: 10px;
@@ -201,7 +211,7 @@
         }
       }
     }
-    
+
     .spot-information-textarea {
       height: 150px;
     }
@@ -216,8 +226,14 @@
 .submit-button-area {
   display: flex;
   justify-content: center;
-  
+
   .post-submit-button {
     width: 300px;
   }
+}
+
+.error-mark {
+  text-decoration: none;
+  display: inline;
+  color: #FF3333;
 }
