--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12348,6 +12348,7 @@ body {
   background-color: white;
   position: fixed;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  z-index: 100;
 }
 
 #header .header-button {
