--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
 .mypage {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  place-items: center;
 }
 
 .contents-outer {
@@ -10,7 +10,7 @@
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3);
   margin: 120px 0 60px 0;
   min-height: 870px;
-  min-width: 1400px;
+  min-width: 1300px;
 }
 
 .contents-outer .contents-title {
