--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,24 +25,25 @@ html, body {
     background-color: white;
     position: fixed;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, .5);
-    
+    z-index: 100;
+
     .header-button {
         text-decoration: none;
         padding: 20px 25px;
         color: black;
     }
-    
+
     .header-button:hover {
         background-color: rgba(213, 218, 229, 0.6);
         transition: 1.0s;
     }
-    
+
     #logo {
         margin-left: 20px;
         display: inline-block;
         height: 50px;
     }
-    
+
     #user-name {
         margin: auto 120px auto 0;
         font-size: 18px;
@@ -58,7 +59,7 @@ html, body {
     height: 100vh;
     width: 100%;
     pointer-events: none;
-    
+
     a,
     a:visited,
     a:focus,
@@ -67,12 +68,12 @@ html, body {
         text-decoration: none;
         outline: 0;
     }
-    
+
     ul {
         padding: 0;
         list-style: none;
     }
-    
+
     .bg {
         position: absolute;
         top: 60px;
@@ -84,7 +85,7 @@ html, body {
         transition: .3s;
         background: #000;
     }
-        
+
     .button {
         position: relative;
         display: flex;
@@ -104,7 +105,7 @@ html, body {
         touch-action: manipulation;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
     }
-    
+
     .icon-bar {
         display: block;
         width: 100%;
@@ -113,11 +114,11 @@ html, body {
         background: #aaa;
         transition: .3s;
     }
-    
+
     .icon-bar + .icon-bar {
         margin-top: 5px;
     }
-    
+
     #nav-content {
         margin-top: 60px;
         padding: 20px;
@@ -132,13 +133,13 @@ html, body {
         transform: translateX(120%);
         transition: transform .3s;
         contain: paint;
-        
+
         ul {
             height: 100%;
             display: flex;
             flex-direction: column;
         }
-        
+
         li a {
             padding: 20px 5px;
             display: block;
@@ -146,7 +147,7 @@ html, body {
             text-transform: uppercase;
             transition: color .1s;
         }
-        
+
         li a:hover {
             color: #BF7497;
         }
@@ -183,4 +184,3 @@ html, body {
 #nav-container:focus-within #nav-content {
     transform: translateX(20%);
 }
-
