--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -30,68 +30,72 @@
   width: 30%;
 }
 
-.contents-outer .contents-wrapper .contents-profile .profile-area {
-  border: solid 0.1px rgba(204, 204, 204, 0.8);
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer {
+  border: solid 1px rgba(204, 204, 204, 0.8);
   border-radius: 10px;
   box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.3);
 }
 
-.contents-outer .contents-wrapper .contents-profile .profile-area h3 {
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer .profile-area {
+  margin: 0 20px;
+}
+
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer .profile-area h3 {
   margin: 20px 0 35px 0;
   text-align: center;
 }
 
-.contents-outer .contents-wrapper .contents-profile .profile-area .profile-info-area {
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer .profile-area .profile-info-area {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.contents-outer .contents-wrapper .contents-profile .profile-area .profile-info-area .profile-image-area {
-  width: 35%;
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer .profile-area .profile-info-area .profile-image-area {
+  width: 155px;
 }
 
-.contents-outer .contents-wrapper .contents-profile .profile-area .profile-info-area .profile-image-area img {
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer .profile-area .profile-info-area .profile-image-area img {
   width: 155px;
   height: 155px;
   border-radius: 50%;
 }
 
-.contents-outer .contents-wrapper .contents-profile .profile-area .profile-info-area .profile-count-area {
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer .profile-area .profile-info-area .profile-count-area {
   width: 55%;
   display: flex;
   justify-content: center;
 }
 
-.contents-outer .contents-wrapper .contents-profile .profile-area .profile-info-area .profile-count-area h4 {
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer .profile-area .profile-info-area .profile-count-area h4 {
   text-align: center;
 }
 
-.contents-outer .contents-wrapper .contents-profile .profile-area .profile-info-area .profile-count-area .post-count-area {
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer .profile-area .profile-info-area .profile-count-area .post-count-area {
   width: 50%;
 }
 
-.contents-outer .contents-wrapper .contents-profile .profile-area .profile-info-area .profile-count-area .followed-count-area {
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer .profile-area .profile-info-area .profile-count-area .followed-count-area {
   width: 50%;
 }
 
-.contents-outer .contents-wrapper .contents-profile .profile-area .profile-name-area {
-  margin-top: 25px;
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer .profile-area .profile-name-area {
+  margin: 30px;
   display: flex;
   justify-content: space-between;
 }
 
-.contents-outer .contents-wrapper .contents-profile .profile-area .profile-name-area p {
-  margin: 0 0 0 30px;
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer .profile-area .profile-name-area p {
+  margin: 0;
   font-size: 30px;
 }
 
-.contents-outer .contents-wrapper .contents-profile .profile-area .profile-name-area button {
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer .profile-area .profile-name-area button {
   font-size: 12px;
   margin-right: 20px;
 }
 
-.contents-outer .contents-wrapper .contents-profile .profile-area .profile-introduction-area {
+.contents-outer .contents-wrapper .contents-profile .profile-area-outer .profile-area .profile-introduction-area {
   margin: 35px 30px;
 }
 
@@ -167,7 +171,7 @@
   height: 180px;
   padding: 20px 15px;
   margin-bottom: 15px;
-  border: solid 0.1px rgba(204, 204, 204, 0.8);
+  border: solid 1px rgba(204, 204, 204, 0.8);
   border-radius: 10px;
   box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.5);
   display: flex;
@@ -214,14 +218,91 @@
 }
 
 .plan-item-wrapper .plan-item .plan-outline-wrapper .icon-area .bi-star-fill {
-  color: #ffd700;
+  color: #fcc800;
 }
 
-.plan-item-wrapper .plan-item .plan-outline-wrapper .icon-area .bi-chat-left-dots-fill {
-  color: #c0c0c0;
+.plan-item-wrapper .plan-item .plan-outline-wrapper .icon-area .bi-geo-fill {
+  color: #0068b7;
+}
+
+.plan-item-wrapper .plan-item .plan-outline-wrapper .icon-area .bi-pencil-square {
+  margin-right: 8px;
+  color: #5f5f5f;
 }
 
 .plan-item-wrapper .plan-item:last-child {
   margin-bottom: 0;
+}
+
+.spot-item-outer {
+  display: grid;
+  place-items: center;
+}
+
+.spot-item-wrapper {
+  padding: 20px 0px;
+  width: 600px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.spot-item-wrapper .spot-item {
+  height: 320px;
+  width: 250px;
+  margin: 0 20px 30px 20px;
+  padding: 0;
+  border: solid 0.5px rgba(77, 77, 77, 0.5);
+  box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.3);
+  text-decoration: none;
+  color: black;
+}
+
+.spot-item-wrapper .spot-item .spot-image-outer {
+  height: 200px;
+  background-color: #f5f5f5;
+  border-bottom: solid 0.5px rgba(77, 77, 77, 0.5);
+  display: flex;
+  justify-content: center;
+}
+
+.spot-item-wrapper .spot-item .spot-image-outer .spot-image {
+  margin: 4%;
+  max-height: 90%;
+  max-width: 85%;
+  flex-wrap: wrap;
+  border-radius: 5px;
+}
+
+.spot-item-wrapper .spot-item .spot-title-area {
+  padding: 5px 10px;
+}
+
+.spot-item-wrapper .spot-item .spot-title-area p {
+  margin: 8px 0 0 0;
+  text-align: center;
+  text-decoration: underline;
+}
+
+.spot-item-wrapper .spot-item .icon-area {
+  margin: 8px 0 7px 0;
+  text-align: center;
+}
+
+.spot-item-wrapper .spot-item .icon-area .bi {
+  margin: 0 5px 0 10px;
+}
+
+.spot-item-wrapper .spot-item .icon-area .bi-star-fill {
+  color: #fcc800;
+}
+
+.spot-item-wrapper .spot-item .icon-area .bi-geo-fill {
+  color: #0068b7;
+}
+
+.spot-item-wrapper .spot-item .icon-area .bi-pencil-square {
+  margin-right: 8px;
+  color: #5f5f5f;
 }
 
