--- a/resources/sass/planpage.scss
+++ b/resources/sass/planpage.scss
@@ -9,7 +9,7 @@
     height: calc(100vh - 60px);
     width: 250px;
     background-color: #fff;
-    box-shadow: 0 0 8px 0 rgb(0 0 0 / 15%);
+    box-shadow: 0 0 8px 0 rgb(0 0 0 / 40%);
     position: fixed;
     z-index: 80;
 
@@ -55,7 +55,7 @@
 
 .accordion-title:hover {
   background-color: rgba(213, 218, 229, 0.9);
-  transition: 0.4s;
+  // transition: 0.4s;
 }
 
 /* アコーディオンのコンテンツ部分 */
@@ -77,7 +77,7 @@
 
 .accordion-content:hover {
   background-color: rgba(213, 218, 229, 0.6);
-  transition: 0.4s;
+  // transition: 0.4s;
 }
 
 /* accordion-content-activeクラスが付いているものは初期状態で表示しておく */
@@ -173,8 +173,31 @@
 .plan-outline-wrapper {
   width: 1100px;
 
+  .post-user-wrapper {
+    text-align: right;
+
+    .plan-post-user {
+      text-decoration: none;
+      color: #3e3e3e;
+    }
+
+    .plan-post-user:hover {
+      background-color: rgba(213, 218, 229, 0.9);
+      transition: 0.4s;
+    }
+  }
+
+  .plan-edit-button {
+    text-align: right;
+
+    input {
+      margin-right: 12px;
+      width: 150px;
+    }
+  }
+
   .plan-images-wrapper {
-    margin: 50px auto 0 auto;
+    margin: 20px 0 auto 0;
     width: 100%;
     height: 400px;
     display: flex;
@@ -231,6 +254,21 @@
         white-space: pre-wrap;
       }
     }
+
+    .fav-button-area {
+      margin-top: 30px;
+
+      a {
+        width: 100%;
+      }
+
+      .plan-unfav-btn {
+        background-color: #FFF;
+        color: #fcc800;
+        font-weight: 600;
+        border: solid 2px #fcc800;
+      }
+    }
   }
 
   .plan-map-area {
@@ -254,7 +292,7 @@
   .spot-image-outline-wrapper {
     height: 100%;
 
-    margin: 80px 0 0 0;
+    margin: 40px 0 0 0;
     display: flex;
     justify-content: space-around;
 
@@ -328,6 +366,17 @@
             color: #666666;
           }
         }
+
+        .spot-fav-button {
+          margin-right: 10px;
+        }
+
+        .spot-unfav-btn {
+          background-color: #FFF;
+          color: #fcc800;
+          font-weight: 600;
+          border: solid 2px #fcc800;
+        }
       }
     }
   }
@@ -343,11 +392,6 @@
       padding: 0;
     }
 
-    // .spot-info-header {
-    //   border-bottom: 1px solid rgb(85,85,85, 0.3);
-    //   margin-bottom: 10px;
-    // }
-
     .spot-info-wrapper {
       width: 43%;
       white-space: pre-wrap;
@@ -355,19 +399,38 @@
     .spot-comment-wrapper {
       width: 48%;
 
-      // .spot-comment-header {
-      //   margin-bottom: 35px;
-      //   border-bottom: 1px solid rgb(85,85,85, 0.3);
-      // }
-    }
+      .comment-item {
+        display: flex;
+        justify-content: center;
 
+        .comment-title {
+          margin-bottom: 8px;
+
+          p{
+            font-weight: 700;
+          }
+        }
+
+        .comment-user-name {
+          display: flex;
+          flex-direction: row;
+          align-items: flex-end;
+          padding: 0 0 0px 5px;;
+          width: 130px;
+
+          img {
+            width: 40px;
+            height: 40px;
+            border-radius: 10px;
+          }
+        }
+
+      }
+    }
   }
+
   .spot-map-wrapper {
     margin-top: 50px;
-
-    // .spot-map-header {
-    //   border-bottom: 1px solid rgb(85,85,85, 0.3);
-    // }
 
     .map {
       margin: 30px 0 60px 0;
@@ -384,7 +447,7 @@
   margin: 0 15px 15px 0;
   padding: 7px 10px;
   width: 450px;
-  height: 95px;
+  min-height: 95px;
   color: #555;
   font-size: 16px;
   background: #FFF;
