--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12334,7 +12334,7 @@ a.text-dark:focus {
 
 html,
 body {
-  background-color: #f5f5f5;
+  background-color: #e0e0e0;
   height: 100%;
 }
 
@@ -12349,6 +12349,7 @@ body {
   position: fixed;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
   z-index: 100;
+  border-bottom: solid 1px;
 }
 
 #header .header-button {
