--- a/public/css/usersview.css
+++ b/public/css/usersview.css
@@ -9,7 +9,7 @@
   background-color: #fff;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3);
   margin: 120px 0 60px 0;
-  min-height: 870px;
+  min-height: 750px;
   min-width: 1300px;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .contents-outer .contents-wrapper {
-  margin: 50px 0;
+  margin: 50px 0 0 0;
   padding: 0px 50px;
   /* タブの基本スタイル */
   /* 非選択のタブにマウスカーソルを乗せたら色を変える */
