--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,7 +11,7 @@
 
 // 共通レイアウト
 html, body {
-    background-color: #f5f5f5;
+    background-color: #e0e0e0;
     height: 100%;
 }
 
@@ -26,6 +26,7 @@ html, body {
     position: fixed;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, .5);
     z-index: 100;
+    border-bottom: solid 1px;
 
     .header-button {
         text-decoration: none;
