--- a/resources/sass/searchpage.scss
+++ b/resources/sass/searchpage.scss
@@ -43,6 +43,7 @@
 
     input {
       margin: 20px 10px;
+          border: 1px solid #575757;
     }
 
     span {
@@ -53,7 +54,19 @@
   .keytag-search {
     display: flex;
     justify-content: space-between;
-    margin: 20px 0 35px 0;
+    margin: 10px 0 35px 0;
+
+    .keytag-plan-search {
+      width: 80%;
+    }
+
+    .search-button-wrapper {
+      width: 20%;
+    }
+
+    .search-button-plan {
+      padding: 30px 0 0 20px;
+    }
 
     .search-item {
       display: flex;
@@ -64,18 +77,21 @@
     }
 
     .item-transportation {
-      width: 43%;
+      width: 45%;
 
       select {
         width: 80%;
+            border: 1px solid #575757;
       }
     }
 
     .item-days {
       width: 43%;
+      margin-right: 10px;
 
       select {
         width: 80%;
+        border: 1px solid #575757;
       }
     }
 
@@ -84,6 +100,7 @@
 
       select {
         width: 80%;
+            border: 1px solid #575757;
       }
     }
 
@@ -92,7 +109,12 @@
 
       input {
         width: 90%;
+            border: 1px solid #575757;
       }
+    }
+
+    .item-address-plan {
+      width: 100%;
     }
   }
 }
@@ -162,243 +184,5 @@
 
   .search-error-result {
     margin-top: 40px;
-  }
-
-  .plan-item-wrapper{
-    padding: 0px 0px 80px 0;
-    width: 70%;
-
-    .plan-item {
-      height: 180px;
-      padding: 20px 15px;
-      margin: 30px 0;
-      border: solid 1px rgba(204, 204, 204, 0.8);
-      border-radius: 10px;
-      box-shadow: 0 8px 10px 0 rgba(0, 0, 0, .5);
-      display: flex;
-      text-decoration: none;
-      color: black;
-
-      .plan-image {
-        height: 100%;
-        width: 120px;
-        border-radius: 10px;
-        object-fit: cover;
-      }
-
-      .plan-tag {
-        display: inline-block;
-        font-size: 12px;
-        border-radius: 100vh;
-        padding: 2px 10px;
-        color: #fff;
-        background-color: #7dcafa;
-      }
-
-      .plan-outline-wrapper {
-        padding-left: 30px;
-
-        .plan-title {
-          display: inline-block;
-          font-size: 20px;
-          margin: 0 0 7px 0;
-          padding: 0;
-          text-decoration: underline 0.5px;
-        }
-
-        .icon-area {
-          margin: 5px 0 7px 0;
-
-          .bi {
-            margin: 0 5px 0 10px;
-          }
-
-          .bi-star-fill {
-            color: #fcc800;
-          }
-
-          .bi-geo-fill {
-            color: #0068b7;
-          }
-
-          .bi-pencil-square {
-            margin-right: 8px;
-            color: #5f5f5f;
-          }
-        }
-      }
-    }
-    .plan-item:last-child {
-      margin-bottom: 0;
-    }
-  }
-}
-
-
-.spot-item-outer {
-  display: grid;
-  place-items: center;
-}
-
-.spot-item-wrapper {
-  padding: 20px 0px;
-  width: 900px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-
-  .spot-item {
-    height: 320px;
-    width: 250px;
-    margin: 0 20px 30px 20px;
-    padding: 0;
-    border: solid 0.5px rgba(77, 77, 77, 0.5);
-    box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.3);
-    text-decoration: none;
-    color: black;
-
-    .spot-image-outer {
-      height: 200px;
-      background-color: #f5f5f5;
-      border-bottom: solid 0.5px rgba(77, 77, 77, 0.5);
-      display: flex;
-      justify-content: center;
-
-      .spot-image {
-        margin: 4%;
-        max-height: 90%;
-        max-width: 85%;
-        flex-wrap: wrap;
-        border-radius: 5px;
-      }
-    }
-
-    .spot-title-area {
-      padding: 5px 10px;
-
-      p {
-        margin: 8px 0 0 0;
-        text-align: center;
-        text-decoration: underline;
-      }
-    }
-
-    .icon-area {
-      margin: 8px 0 7px 0;
-      text-align: center;
-
-      .bi {
-        margin: 0 5px 0 10px;
-      }
-
-      .bi-star-fill {
-        color: #fcc800;
-      }
-
-      .bi-geo-fill {
-        color: #0068b7;
-      }
-
-      .bi-pencil-square {
-        margin-right: 8px;
-        color: #5f5f5f;
-      }
-    }
-  }
-}
-
-.users-contents-outer {
-  padding: 30px 30px;
-  max-width: 1200px;
-
-  .users-contents-wrapper {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-
-    .users-item-wrapper:hover {
-      transform: scale(1.03);
-      // background-color: rgba(213, 218, 229, 0.6);
-      // transition: 1.0s;
-    }
-
-    .users-item-wrapper {
-      border: solid 2px rgba(204, 204, 204, 0.9);
-      border-radius: 10px;
-      box-shadow: 0 8px 10px 0 rgba(0, 0, 0, .3);
-      width: 300px;
-      margin: 30px 40px;
-      padding-bottom: 10px;
-
-      .anker-area {
-        text-decoration: none;
-        color: #24140e;
-      }
-
-      .user-image-area {
-        display: flex;
-        justify-content: center;
-        margin: 20px 0;
-
-        img {
-          width: 180px;
-          height: 180px;
-          border-radius: 50%;
-        }
-      }
-
-      .user-name-area {
-        text-align: center;
-
-        p {
-          font-size: 25px;
-          font-weight: 700;
-          margin: 0;
-        }
-      }
-
-      .user-comment-area {
-        text-align: center;
-        padding: 0 20px 10px 20px;
-
-        p {
-          font-size: 15px;
-          margin: 0;
-        }
-      }
-
-      .follow-button-area {
-        width: 100%;
-        padding: 0px 35px;
-        margin-bottom: 10px;
-
-        .following-btn {
-          background-color: #FFF;
-          color: #6c757d;
-          font-weight: 600;
-          border: solid 2px #6c757d;
-        }
-
-        button {
-          width: 100%;
-        }
-      }
-
-      .icon-area {
-        text-align: center;
-
-        .bi-star-fill {
-          color: #ffd700;
-        }
-
-        .bi-file-earmark-post-fill {
-          color: #436be0;
-        }
-
-        .icon {
-          margin:0 10px;
-        }
-      }
-    }
   }
 }
