--- a/resources/sass/usersview.scss
+++ b/resources/sass/usersview.scss
@@ -8,7 +8,7 @@
   background-color: #fff;
   box-shadow: 0 0 8px 0 rgb(0 0 0 / 30%);
   margin: 120px 0 60px 0;
-  min-height: 870px;
+  min-height: 750px;
   min-width: 1300px;
 
   .contents-title {
@@ -17,7 +17,7 @@
   }
 
   .contents-wrapper {
-    margin: 50px 0;
+    margin: 50px 0 0 0;
     padding: 0px 50px;
 
     .tabs-menu {
